flux/apps/utilities/well-known/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nginx
    namespace: well-known
spec:
    selector:
        app: nginx
    ports:
        - name: http
          port: 80
          targetPort: 80
          protocol: TCP
    type: ClusterIP
